Added element animations

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <section class="slide">
       <article class="slide-content">
         <h1 class="centered">Ola ke ase?</h1>
-        <h2 class="centered">Ola ke iso?</h2>
+        <h2 class="centered animate a-fade-in a-rotate-360 a-zoom-in">Ola ke iso?</h2>
         <p>esta es una prueba de texto para ver si el contenido se ajusta al tamanio de la pantalla</p>
       </article>
     </section>
